Fix logout button where it goes offscreen

--- a/client/src/css/components/LoggedIn.css
+++ b/client/src/css/components/LoggedIn.css
@@ -11,3 +11,7 @@
     object-fit: contain;
     height: 1.2em;
 }
+
+#user-link * {
+    pointer-events: none;
+}
